Grease Pencil As SVG export corrupt #87479

Closed
opened 2021-04-14 06:21:59 +02:00 by Henry F Kroll III · 10 comments

System Information
Operating system: Linux 64-bit Fedora 35
Graphics card: NVIDIA GK106GLM [Quadro K2100M]

blender-2.93.0-09d7d88cc42a-linux64
Broken:
Worked: never

[test.svg: header snipped]



<path fill-opacity="1" fill="#000000" stroke="none" d="M-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-

[output repeats]

Developers will probably immediately recognize what is happening here. Either this is some pointer address instead of the value, or it is just exporting wrong data from somewhere.

Exact steps for others to reproduce the error

Add-->object-->Grease Pencil-->Stroke
File-->Export-->Grease Pencil As SVG

**System Information** Operating system: Linux 64-bit Fedora 35 Graphics card: NVIDIA GK106GLM [Quadro K2100M] blender-2.93.0-09d7d88cc42a-linux64 Broken: Worked: never [test.svg: header snipped] <g id="blender_object_Stroke"> <!--Layer: Lines--> <g id="Lines"> <path fill-opacity="1" fill="#000000" stroke="none" d="M-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L-1000000015047466219876688855040.000000,-1000000015047466219876688855040.000000L- [output repeats] Developers will probably immediately recognize what is happening here. Either this is some pointer address instead of the value, or it is just exporting wrong data from somewhere. **Exact steps for others to reproduce the error** Add-->object-->Grease Pencil-->Stroke File-->Export-->Grease Pencil As SVG

Added subscriber: @hellork

Added subscriber: @hellork
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this. This is happening when exporting from outside the camera view.
If something is going wrong, there should be at least some error or message pop-up, so I would see this as a bug.

I can confirm this. This is happening when exporting from outside the camera view. If something is going wrong, there should be at least some error or message pop-up, so I would see this as a bug.

Added subscriber: @antoniov

Added subscriber: @antoniov

Outside camera view must use a rectangle with boundbox. Check the boundboux is propertly calculated.

Outside camera view must use a rectangle with boundbox. Check the boundboux is propertly calculated.

do you have a test file?

do you have a test file?
Member

@antoniov yes, I have already debugged the issue. I think selected_objects_boundbox_calc is called before any call to create_object_list. So the list of selected objects is empty.
I have a fix ready.

@antoniov yes, I have already debugged the issue. I think `selected_objects_boundbox_calc` is called before any call to `create_object_list`. So the list of selected objects is empty. I have a fix ready.

This issue was referenced by 9ca55b10b8

This issue was referenced by 9ca55b10b8cc78271a6266c4af473aa5fde493c6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Falk David self-assigned this 2021-04-14 10:14:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87479
No description provided.